update docs and filter function for user
