# turtle-api/app/controllers/user.go
@@ -10,42 +10,53 @@ import (
 	"github.com/yhkl-dev/turtle-dove-beego/turtle-api/utils"
 )
 
-// UserController struct
-// Operations for User
+// UserController struct, Operation for user api
 type UserController struct {
 	beego.Controller
 }
 
 // GetAll func
 // @Title GetAllUser
-// @Description get all users
-// @success 200
+// @Description Return all users
+// @Failure 500 internal error
+// @Param page query int false page
+// @Param page_size query int false page_size
+// @Param UserName query string false user_name
+// @Param Email query string false user_email
+// @Param RealName query string false user_real_name
+// @Param IsActive query int false 0: no or 1:yes
+// @Success 200 success
+// @Failure 404 data not found
 // @router / [get]
 func (us *UserController) GetAll() {
-	page, _ := strconv.Atoi(us.GetString("page"))
 
+	page, _ := strconv.Atoi(us.GetString("page"))
+	if page < 1 {
+		page = 1
+	}
 	pageSize, err := strconv.Atoi(us.GetString("page_size"))
 	if err != nil {
 		pageSize = 10
 	}
 
+	realName := us.GetString("realName")
+	email := us.GetString("email")
+	userName := us.GetString("userName")
+	isActive, _ := us.GetInt("isActive")
+
 	remoteAddr := us.Ctx.Request.Host
 
-	if page < 1 {
-		page = 1
-	}
-
-	count, _ := services.UserService.GetTotal()
-	users, _ := services.UserService.GetUserList(page, pageSize)
+	users, count, _ := services.UserService.GetUserList(page, pageSize, userName, realName, email, isActive)
 
 	data := new(utils.JSONData)
-
 	data.Data = users
 	data.Count = int(count)
-	data.Pager = utils.NewPager(page, pageSize, data.Count, remoteAddr+beego.URLFor("UserController.GetAll"))
+	data.Pager = utils.NewPager(page,
+		pageSize,
+		data.Count,
+		remoteAddr+beego.URLFor("UserController.GetAll"))
 
 	us.Data["json"] = data
-
 	us.ServeJSON()
 }
 
@@ -83,8 +94,10 @@ func (us *UserController) AddUser() {
 }
 
 // @Title Delete User By userID
-// @Param userID query int required
-// @success 200
+// @Description Delete user by userid
+// @Param userID query int true userid
+// @Failure 400 bad request
+// @Success 204 success
 // @router / [delete]
 func (us *UserController) DeleteUser() {
 
@@ -92,15 +105,21 @@ func (us *UserController) DeleteUser() {
 	err := services.UserService.DeleteUser(id)
 
 	if err != nil {
-		us.Ctx.ResponseWriter.WriteHeader(400)
-		us.Ctx.ResponseWriter.Write([]byte(err.Error()))
-		us.StopRun()
+		us.CustomAbort(400, err.Error())
 	}
 	us.Data["json"] = "ok"
 	us.ServeJSON()
 }
 
 // @Title update user profile
+// @Description update user profile and password
+// @Param userID query int true userid
+// @Param Email body string false
+// @Param UserPassword body string false
+// @Param RealName body string false
+// @Failure 500 parse json error
+// @Failure 404 uer not found
+// @Success 204 ok
 // @router / [put]
 func (us *UserController) UpdateUserProfile() {
 	id, _ := us.GetInt("userID")
@@ -140,6 +159,13 @@ func (us *UserController) UpdateUserProfile() {
 	us.ServeJSON()
 }
 
+// @Title Login interface
+// @Description return a jwt token
+// @Param UserName body string true  user_name
+// @Param UserPassword body string true user_password
+// @Failure 500 internal error
+// @Failure 401 authentication error
+// @Success 201 login success
 // @router /login [post]
 func (us *UserController) Login() {
 	var userParse tables.User
